crates/uitest/fixtures/ty/trait_impl_conflict.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/trait_impl_conflict.fe
---
error[3-0001]: conflict trait implementation
  ┌─ trait_impl_conflict.fe:4:26
  │
4 │ impl<T, U> Foo<T, U> for (i32, i32) {}
  │                          ^^^^^^^^^^ conflict trait implementation
  ·
8 │ impl<T, U> Foo<T, U> for (T, T) {}
  │                          ------ conflict with this trait implementation

error[3-0001]: conflict trait implementation
   ┌─ trait_impl_conflict.fe:16:28
   │
16 │ impl<T, U> Foo<T, i32> for S<T, T> {}
   │                            ^^^^^^^ conflict trait implementation
17 │ impl<T, U> Foo<T, i32> for S<i32, i32> {}
   │                            ----------- conflict with this trait implementation


